--- a/HSSTORE/index.html
+++ b/HSSTORE/index.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html" class="active">Início</a></li>
                 <li><a href="contas.html">Contas</a></li>
                 <li><a href="giftcards.html">Gift Cards</a></li>
+                <li><a href="jogos.html">Jogos</a></li>
                 <li><a href="login.html" id="loginLink">Login</a></li>
                 <li><a href="cadastro-produtos.html" id="cadastroProdutoNav" class="nav-protected">Cadastrar Produto</a></li>
             </ul>
@@ -27,9 +28,12 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>O marketplace dos gamers!</h1>
-                <p>Compre ou venda contas e gift cards das maiores plataformas com segurança, rapidez e suporte!</p>
-                <a href="contas.html" class="btn-primary">Ver Contas</a>
+                <h1>O marketplace dos games!</h1>
+                <p>Compre ou venda contas, gift cards e jogos digitais das maiores plataformas com segurança, rapidez e suporte!</p>
+                <div style="display:flex;gap:1rem;flex-wrap:wrap;">
+                    <a href="contas.html" class="btn-primary">Ver Contas</a>
+                    <a href="jogos.html" class="btn-secondary">Ver Jogos</a>
+                </div>
             </div>
             <div class="hero-img">
                 <img src="assets/hero-gamer.svg" alt="Gamer Banner">
