--- a/HSSTORE/index.html
+++ b/HSSTORE/index.html
@@ -91,7 +91,7 @@
             <div class="trader-info">
                 <h2>Torne-se um <span class="hs-trader">HSTrader</span></h2>
                 <ul>
-                    <li>💸 Ganhe comissão em cada venda</li>
+                    <li>💸 Menos taxas</li>
                     <li>📊 Painel exclusivo para gerenciar produtos</li>
                     <li>🛠️ Suporte dedicado para revendedores</li>
                 </ul>
